--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <script>
         $('body').fireworks({
-      sound:false,
+      sound:true,
       opacity: 0.8,
       width:'100%',
       height:'100%'
